cabal-version: 2.0
name:          plutus-playground-server
version:       1.0.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    kris.jenkins@tweag.io
author:        Kris Jenkins
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple
data-files:
  test/gists1.json
  usecases/Crowdfunding.hs
  usecases/ErrorHandling.hs
  usecases/Game.hs
  usecases/Starter.hs
  usecases/Vesting.hs

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  exposed-modules:
    Crowdfunding
    CrowdfundingSimulations
    ErrorHandling
    ErrorHandlingSimulations
    Game
    GameSimulations
    HelloWorld
    HelloWorldSimulations
    Playground.Interpreter
    Playground.Server
    Playground.Usecases
    SimulationUtils
    Starter
    StarterSimulations
    Vesting
    VestingSimulations

  hs-source-dirs:     src usecases
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wno-missing-import-lists
    -Wredundant-constraints -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  --------------------
  -- Local components
  --------------------
  build-depends:
      playground-common          >=1.0.0
    , plutus-contract            >=1.0.0
    , plutus-ledger              >=1.0.0
    , plutus-ledger-constraints  >=1.0.0
    , plutus-script-utils        >=1.0.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
      plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base                 >=4.7  && <5
    , bytestring
    , containers
    , data-default
    , exceptions
    , file-embed
    , http-client
    , http-conduit
    , jwt
    , lens
    , monad-logger
    , mtl
    , newtype-generics
    , regex-compat
    , row-types
    , servant              >=0.16
    , servant-client
    , servant-client-core
    , servant-server
    , template-haskell
    , text
    , time-units
    , transformers
    , wai-cors
    , web-ghc

library plutus-playground-usecases
  hs-source-dirs:     usecases
  other-modules:
    Crowdfunding
    CrowdfundingSimulations
    ErrorHandling
    ErrorHandlingSimulations
    Game
    GameSimulations
    HelloWorld
    HelloWorldSimulations
    SimulationUtils
    Starter
    StarterSimulations
    Vesting
    VestingSimulations

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wunused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wno-missing-signatures -Wno-missing-import-lists -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  --------------------
  -- Local components
  --------------------
  build-depends:
      playground-common          >=1.0.0
    , plutus-contract            >=1.0.0
    , plutus-ledger              >=1.0.0
    , plutus-ledger-constraints  >=1.0.0
    , plutus-script-utils        >=1.0.0

  --------------------
  -- IOG dependencies
  --------------------
  build-depends:
      plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base          >=4.7 && <5
    , bytestring
    , containers
    , data-default
    , lens
    , mtl
    , row-types
    , text
    , transformers

executable plutus-playground-server
  main-is:            Main.hs
  hs-source-dirs:     app usecases
  other-modules:
    Crowdfunding
    CrowdfundingSimulations
    ErrorHandling
    ErrorHandlingSimulations
    Game
    GameSimulations
    HelloWorld
    HelloWorldSimulations
    PSGenerator
    SimulationUtils
    Starter
    StarterSimulations
    Types
    Vesting
    VestingSimulations
    Webserver

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0 -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  --------------------
  -- Local components
  --------------------
  build-depends:
      freer-extras                >=1.0.0
    , playground-common           >=1.0.0
    , plutus-contract             >=1.0.0
    , plutus-ledger               >=1.0.0
    , plutus-ledger-constraints   >=1.0.0
    , plutus-playground-server    >=1.0.0
    , plutus-playground-usecases  >=1.0.0
    , plutus-script-utils         >=1.0.0

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
      plutus-ledger-api  >=1.0.0
    , plutus-tx          >=1.0.0

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , aeson-pretty
    , base                  >=4.7 && <5
    , bytestring
    , containers
    , data-default
    , data-default-class
    , exceptions
    , filepath
    , lens
    , monad-logger
    , mtl
    , optparse-applicative
    , purescript-bridge
    , row-types
    , servant
    , servant-purescript
    , servant-server
    , text
    , time-units
    , transformers
    , warp
    , web-ghc

test-suite plutus-playground-server-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:
    GistSpec
    Paths_plutus_playground_server
    Playground.InterpreterSpec
    Playground.UsecasesSpec

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  -- We don't want "-threaded" and friends here as there are many tests with heavy GHC compilation.
  -- This is a hack as one can fine-tune test cases better (like sequential tests) with in-code tasty dependencies.
  -- See #4085.
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wno-missing-import-lists
    -Wredundant-constraints -fprint-potential-instances

  --------------------
  -- Local components
  --------------------
  build-depends:
      playground-common           >=1.0.0
    , plutus-contract             >=1.0.0
    , plutus-ledger               >=1.0.0
    , plutus-playground-server    >=1.0.0
    , plutus-playground-usecases  >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base              >=4.7 && <5
    , bytestring
    , mtl
    , newtype-generics
    , tasty
    , tasty-hunit
    , text
    , time-units
    , transformers
    , web-ghc
