cabal-version:      2.4
name:               plutus-script-evaluation-test
version:            0.1.0.0

common lang
    default-language: Haskell2010
    default-extensions:
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        ExplicitForAll
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        NamedFieldPuns
        ScopedTypeVariables
        StandaloneDeriving
    ghc-options:
        -Wall
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-import-lists
        -Wnoncanonical-monad-instances
        -Wredundant-constraints
        -Wunused-packages

library testlib
    import: lang
    hs-source-dirs:   testlib
    exposed-modules:
        Plutus.Script.Evaluation.Dump
        Plutus.Script.Evaluation.Options
        Plutus.Script.Evaluation.Types
    build-depends:
        PyF,
        base >=4.9 && <5,
        base16-bytestring,
        cardano-api,
        cardano-binary,
        cardano-ledger-alonzo,
        extra,
        filepath,
        optparse-applicative,
        plutus-streaming,
        serialise,
        streaming,
        text,
        time,
        transformers

executable dump-script-events
    import: lang
    hs-source-dirs:   dump-script-events
    main-is:          Main.hs
    build-depends:
        base >=4.9 && <5,
        optparse-applicative,
        testlib
