cabal-version:   3.0
name:            plutus-script-utils
version:         1.2.0.0
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:      konstantinos.lambrou@iohk.io
author:          Konstantinos Lambrou-Latreille
homepage:        https://github.com/input-output-hk/plutus-apps#readme
bug-reports:     https://github.com/input-output-hk/plutus-apps/issues
synopsis:        Helper/utility functions for writing Plutus scripts.
description:     Helper/utility functions for writing Plutus scripts.
category:        Language
build-type:      Simple
extra-doc-files: README.adoc

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-import-lists
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  import:           lang
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Plutus.Script.Utils.Ada
    Plutus.Script.Utils.Scripts
    Plutus.Script.Utils.Typed
    Plutus.Script.Utils.V1.Address
    Plutus.Script.Utils.V1.Contexts
    Plutus.Script.Utils.V1.Generators
    Plutus.Script.Utils.V1.Scripts
    Plutus.Script.Utils.V1.Tx
    Plutus.Script.Utils.V1.Typed.Scripts
    Plutus.Script.Utils.V1.Typed.Scripts.MonetaryPolicies
    Plutus.Script.Utils.V1.Typed.Scripts.StakeValidators
    Plutus.Script.Utils.V1.Typed.Scripts.Validators
    Plutus.Script.Utils.V2.Address
    Plutus.Script.Utils.V2.Contexts
    Plutus.Script.Utils.V2.Generators
    Plutus.Script.Utils.V2.Scripts
    Plutus.Script.Utils.V2.Tx
    Plutus.Script.Utils.V2.Typed.Scripts
    Plutus.Script.Utils.V2.Typed.Scripts.MonetaryPolicies
    Plutus.Script.Utils.V2.Typed.Scripts.StakeValidators
    Plutus.Script.Utils.V2.Typed.Scripts.Validators
    Plutus.Script.Utils.Value

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api            >=1.35
    , cardano-ledger-alonzo
    , plutus-core            >=1.0.0
    , plutus-ledger-api      >=1.0.0
    , plutus-tx              >=1.0.0
    , plutus-tx-plugin       >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base           >=4.9 && <5
    , bytestring
    , mtl
    , prettyprinter
    , serialise
    , tagged
    , text

  -- TODO This needs to be changed to 1.35 once cardano-node creates the tag
  ghc-options:      -fprint-potential-instances

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

test-suite plutus-ledger-test
  import:             lang
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base   >=4.9 && <5
    , tasty
